--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,73 @@
-/* CSS declarations go here */
+/* ============================== General styles ============================== */
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Chewy);
+
+/*.ed-container {
+  border: 1px dotted gray;
+}
+
+.ed-item {
+  border: 1px dashed orange;
+}*/
+
+.container-total {
+  max-width: 100%;
+}
+
+.item-no-padding {
+  padding: 0;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+
+/* ============================== Home styles ============================== */
+.home-header {
+  background-attachment: fixed;
+  background-image: url('fondo6.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 46em;
+}
+
+.home-navbar {
+  background-color: transparent;
+}
+
+.uk-navbar-brand {
+  margin: 1em;
+}
+
+.anchor-item-nav-home {
+  color: white !important;
+  margin-top: 3em;
+}
+
+.uk-navbar-toggle {
+  color: white;
+  font-size: 2em;
+  margin-top: 1em;
+}
+
+.anchor-item-nav-home, .uk-navbar-toggle {
+  text-shadow: 0px 3px 3px #191923,
+               0px -3px 3px #191923;
+}
+
+
+
+@media screen and (max-width: 350px){
+  .home-header {
+    background-attachment: scroll;
+    background-image: url('fondo7.jpg');
+  }
+}
+
+@media screen and (min-width: 350px) and (max-width: 760px){
+  .home-header {
+    background-attachment: scroll;
+  }
+}
