--- a/client/main.css
+++ b/client/main.css
@@ -43,7 +43,9 @@ body {
 
 .anchor-item-nav-home {
   color: white !important;
-  margin-top: 3em;
+  font-size: 1.3em !important;
+  margin-top: 2.5em;
+  text-decoration: none;
 }
 
 .uk-navbar-toggle {
@@ -55,6 +57,25 @@ body {
 .anchor-item-nav-home, .uk-navbar-toggle {
   text-shadow: 0px 3px 3px #191923,
                0px -3px 3px #191923;
+}
+
+.anchor-item-nav-home:hover {
+  background-color: transparent !important;
+  cursor: pointer !important;
+}
+
+.uk-offcanvas-bar {
+  background-color: #0E79B2;
+  padding: 2em 0 0 0;
+}
+
+.content-movil-anchor-nav {
+  margin-top: 1em;
+  padding: 1.5em 0 1em 1.5em;
+}
+
+.content-movil-anchor-nav a {
+  text-shadow: none;
 }
 
 
@@ -69,5 +90,6 @@ body {
 @media screen and (min-width: 350px) and (max-width: 760px){
   .home-header {
     background-attachment: scroll;
+    background-image: url('fondo8.jpg');
   }
 }
