--- a/client/main.css
+++ b/client/main.css
@@ -3,12 +3,16 @@
 @import url(https://fonts.googleapis.com/css?family=Chewy);
 
 /*.ed-container {
-  border: 1px dotted gray;
+  border: 1px dotted red;
 }
 
 .ed-item {
   border: 1px dashed orange;
 }*/
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
 
 .container-total {
   max-width: 100%;
@@ -18,45 +22,66 @@
   padding: 0;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
+.item-content-center {
+  text-align: center;
+}
+
+.item-dark-backg {
+  background-color: rgba(25,25,35, .7);
+  color: white;
 }
 
 
 /* ============================== Home styles ============================== */
+/* ========== home header ========== */
 .home-header {
   background-attachment: fixed;
   background-image: url('fondo6.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 46em;
+  height: 47em;
 }
 
 .home-navbar {
   background-color: transparent;
 }
 
+.uk-navbar {
+  /*border: 1px dotted red;*/
+}
+
 .uk-navbar-brand {
-  margin: 1em;
+  /*padding-right: 0em;*/
+}
+
+.logotype {
+  /*border: 1px dotted white;*/
+  width: 7em;
+}
+
+.uk-navbar-nav.desde-tablet {
+  /*border: 1px dashed white;*/
+  margin-left: 3em;
+  margin-top: 2em;
 }
 
 .anchor-item-nav-home {
+  /*border: 1px dotted white;*/
   color: white !important;
   font-size: 1.3em !important;
-  margin-top: 2.5em;
+  /*margin-top: 2.5em;*/
   text-decoration: none;
 }
 
 .uk-navbar-toggle {
   color: white;
   font-size: 2em;
-  margin-top: 1em;
+  margin-top: .5em;
 }
 
 .anchor-item-nav-home, .uk-navbar-toggle {
-  text-shadow: 0px 3px 3px #191923,
-               0px -3px 3px #191923;
+  text-shadow: 0px 3px 3px #191923;
 }
 
 .anchor-item-nav-home:hover {
@@ -66,10 +91,11 @@ body {
 
 .uk-offcanvas-bar {
   background-color: #0E79B2;
-  padding: 2em 0 0 0;
+  padding: 0 0 0 0;
 }
 
 .content-movil-anchor-nav {
+  /*border: 1px solid white;*/
   margin-top: 1em;
   padding: 1.5em 0 1em 1.5em;
 }
@@ -79,11 +105,56 @@ body {
 }
 
 
+/* ========== home information ========== */
+.home-information {
+  margin-top: 9em; /* deseable mantener estas dos declaraciones iguales, pero separadas */
+}
+
+.title-home-information {
+  margin-bottom: 4em;
+}
+
+.icon-home-information {
+  width: 10em;
+}
+
+.text-icon-information {
+  margin-bottom: 4em;
+}
+
+
+/* ========== home services ========== */
+.home-services {
+  background-attachment: fixed;
+  background-image: url('fondo9.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 9em; /* deseable mantener estas dos declaraciones iguales, pero separadas */
+}
+
+.home-services .ed-item {
+  padding-bottom: 4em;
+  padding-top: 4em;
+}
+
+.title-home-services {
+  color: white;
+}
+
+.icon-home-services {
+  width: 7em;
+}
+
 
 @media screen and (max-width: 350px){
   .home-header {
     background-attachment: scroll;
     background-image: url('fondo7.jpg');
+  }
+
+  .home-services {
+    background-attachment: scroll;
   }
 }
 
@@ -91,5 +162,9 @@ body {
   .home-header {
     background-attachment: scroll;
     background-image: url('fondo8.jpg');
+  }
+
+  .home-services {
+    background-attachment: scroll;
   }
 }
